--- a/index.html
+++ b/index.html
@@ -78,21 +78,12 @@
 
 </div>
  </div>
-
+ <p class="text-center">Manufactured by <a href="https://github.com/fduque" target="_blank">duQ</a></p>
 </div>
-
-
 <script src="script.js"></script>
 </body>
 </html>
-  
-  
-
     <script  src="js/index.js"></script>
-
-
-
-
 </body>
 
 </html>
